# snake

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
backend/: Cargo.toml
backend/src/: backend.h
backend/test/: test.c  test.ts
frontend/: Cargo.toml
frontend/src/: frontend.c  frontend.h  frontend.rs  lib.rs  main.c  main.rs
src/: backend.c  backend.h  backend.rs  frontend.c  frontend.rs  lib.rs  main.c  main.rs
test/: test.ts
