[package]
name = "snake"
version = "0.1.0"
authors = ["Bartłomiej Osiński <bartlomiej.osinski@enigma.com.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[dependencies]
libc = "0.2"
ncurses = "5.99.0"
rand = "0.7"

