[package]
name = "snake_backend"
version = "0.1.0"
authors = ["Bartłomiej Osiński <bartlomiej.osinski@enigma.com.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
rand = "0.7"

