[package]
name = "snake_frontend"
version = "0.1.0"
authors = ["Bartłomiej Osiński <bartlomiej.osinski@enigma.com.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ncurses = "5.99.0"
snake_backend = { path = "../backend" }

